# school-front-desk

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  auth.ts  docker-compose.yml  middleware.ts  next.config.ts  package-lock.json  package.json
api/: .env.example  Dockerfile  pyproject.toml
api/app/: agent.py  authoring.py  cleanup.py  config.py  db.py  embeddings.py  escalation.py  ingest.py  llm.py  main.py  model_catalog.py  models.py  reembed.py  relink.py  retrieval.py  retrieval_base.py  schemas.py  seed.py
api/app/routers/: auth.py
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/api/ask/: route.ts
app/api/author/apply/: route.ts
app/api/author/propose/: route.ts
app/api/changelog/: route.ts
app/api/clean/scan/: route.ts
app/api/entities/: route.ts
app/api/entity/[id]/: route.ts
app/api/graph/: route.ts
app/api/history/: route.ts
app/api/inbox/: route.ts
app/api/ingest/: route.ts
app/login/: page.tsx
app/operator/: page.tsx
components/: CleanupPanel.tsx  EntityInspector.tsx  InboxPanel.tsx  KnowledgeGraph.tsx  OperatorView.tsx  ParentView.tsx  Providers.tsx  SessionBar.tsx  ThemeToggle.tsx  ViewportSync.tsx  useDialogA11y.ts
evals/: README.md  cleanup_evals.py  dataset.json  escalation_dataset.json  escalation_evals.py  escalation_report.md  generate_handbook_evals.py  handbook_dataset.json  handbook_evals.py  handbook_judge_evals.py  handbook_judge_report.md  handbook_report.md  menu_dataset.json  menu_evals.py  menu_report.md  report.md  run_evals.py
lib/: frontDesk.ts
types/: next-auth.d.ts
(+10 files in other folders)
