[project]
name = "frontdesk-api"
version = "0.1.0"
description = "AI Front Desk — FastAPI + LangGraph agent service for Sunnyside Early Learning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "bcrypt>=4.2",
    "langchain-aws>=1.6.2",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "pypdf>=5.0",
    "python-multipart>=0.0.12",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.27",
    "ruff>=0.7",
]
